<resources>
    <string name="app_name">TP1-M14</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="number_of_dogs">Number of dogs</string>
    <string name="number_of_cats">Number of cats</string>
    <string name="birthdate">Birthdate</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
</resources>